<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/base_card"
        android:layout_width="match_parent"
        android:layout_height="818dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="40dp">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="400dp"
            android:outlineAmbientShadowColor="@color/black"
            app:cardBackgroundColor="#F49DBB"
            app:cardCornerRadius="45dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:id="@+id/Linear_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/enter_text"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/hint_text_repeat_no" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:text="@string/repeats_text"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/repeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:hint="@string/total_repeats_no"
            android:inputType="number"
            android:minHeight="48dp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="290dp"
            android:text="@string/new_line_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="290dp"
            android:text="@string/space_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="290dp"
            android:text="@string/period_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="330dp"
            android:backgroundTint="@color/white"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            android:text="@string/clear_switch"
            android:textColor="@color/teal_200"
            android:textSize="22sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="330dp"
            android:backgroundTint="#F1F1F1"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            android:text="@string/generate_btn"
            android:textColor="@color/teal_200"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="300dp"
            app:srcCompat="@drawable/ic_wordrepeat" />


    </androidx.cardview.widget.CardView>
</LinearLayout>